[package]
name = "acerola_jam"
version = "0.1.0"
edition = "2021"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.superrelease]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
